--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,7 @@ fastapi = "^0.110.0"
 sqlalchemy = "^2.0.28"
 uvicorn = { extras = ["standard"], version = "^0.29.0" }
 gunicorn = "^21.2.0"
+pika = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.12.2"
